# school-campaign

./: .gitignore  README.md  run.ps1
backend/: setup_dummy.py
backend/api/: admin.py  api.py  models.py
backend/config/: settings.py  urls.py
frontend/: package-lock.json
frontend/src/: App.svelte  app.css
mgm240-scd40-bthome/: README.md  app.c  app.h  bthome.c  bthome.h  gatt_configuration.btconf  mgm240_scd40_bthome.slcp  scd40.c  scd40.h
mgm240-scd40-bthome/config/: sl_i2cspm_sensor_config.h
nrf52840_coap_light/: CMakeLists.txt  README.md  prj.conf
nrf52840_coap_light/src/: main.c  (+2 more)
zephyrhome/: __init__.py  pyproject.toml
zephyrhome/cli/: __main__.py  generator.py  main.py  schema.py  uploader.py
zephyrhome/cli/components/: base.py  network.py
zephyrhome/cli/components/sensor/: bme280.py  generic.py
zephyrhome/cli/components/switch/: gpio.py
zephyrhome/examples/nrf54l15_sensor/: zephyrhome.yaml
zephyrhome/firmware/base/: CMakeLists.txt  Kconfig
zephyrhome/firmware/base/include/: zh_coap_server.h  zh_component.h  zh_main.h  zh_ot_init.h
zephyrhome/firmware/base/src/: zh_coap_server.c  zh_component.c  zh_main.c  zh_ot_init.c
zephyrhome/firmware/base/zephyr/: module.yml
zephyrhome/firmware/components/sensor_generic/: CMakeLists.txt  Kconfig  zh_sensor_generic.c  zh_sensor_generic.h
zephyrhome/firmware/components/switch_gpio/: CMakeLists.txt  Kconfig  zh_switch_gpio.c  zh_switch_gpio.h
zephyrhome/ha_integration/custom_components/zephyrhome/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  switch.py
(+5 files in other folders)
