[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zephyrhome"
version = "0.1.0"
description = "ESPHome-like CoAP platform for Zephyr RTOS devices"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiocoap>=0.4.7",
    "rich>=13.0",
]

[project.scripts]
zephyrhome = "zephyrhome.cli.main:cli"

# Look one level up (school-campaign/) so that the 'zephyrhome/' directory
# is discovered as the 'zephyrhome' Python package.
[tool.setuptools.packages.find]
where = [".."]
include = ["zephyrhome*"]
exclude = ["zephyrhome.firmware*", "zephyrhome.examples*", "zephyrhome.ha_integration*"]
